deploy/htdocs/version/src/inc/style/component/block/_block-hero-main.scss
.component-block-hero-main {
	@include aspect-ratio(40*$sizeGrid, $sizeGrid * 24);
	min-height: $sizeGrid * 24;
	max-height: 100vh;

	&.has-statistics {

		// Always apply a dark blue layer on top of the crossfader
		.component-image-crossfader {
			&:after {
				@include coverer();
				@include size(100%);
				position: absolute;
				content: '';
				background: rgba($colorPrimary, .5);
			}
		}
	}

	.background-triangle {
		@include arrow(right, rgba($colorPrimary, .95), $sizeGrid * 40);
		@include pos(50%, auto, auto, 0);
		transform: translateY(-50%);
		position: absolute;
		pointer-events: none;
	}

	.secondary-background-triangle {
		@include arrow(left, rgba($colorSecondary, .95), $sizeGrid * 12);
		@include pos(50%, auto, auto, $sizeGrid * 14);
		position: absolute;
		pointer-events: none;
	}

	.tertiary-background-triangle {
		@include arrow(right, rgba($colorWhite, .95), $sizeGrid * 6);
		@include pos(75%, auto, auto, $sizeGrid * 20);
		position: absolute;
		pointer-events: none;
	}

	.slide-content-wrapper {
		overflow: visible;
	}

	.slide-content {
		@include size($sizeGrid * 13, auto);
		@include pos(50%, auto, auto, 0);
		transform: translateY(-50%);
		position: absolute;
		z-index: 1;
		padding-left: $sizeGrid * 3;
		color: $colorWhite;

		.heading {
			margin-bottom: $sizeGrid;
		}

		.copy {
			margin-bottom: $sizeGrid * 2;
		}
	}

	img {
		@include coverer();
		@include size(100%);
	}

	.statistics-wrapper {
		@include pos(auto, auto, $sizeGrid * 2, calc(50% + #{$sizeGrid}));
		position: absolute;
		color: $colorWhite;
		vertical-align: top;
		font-size: 0;

		.heading {
			margin-bottom: $sizeGrid / 2;
		}
	}

	.statistic {
		display: inline-block;
		margin-left: $sizeGrid;

		&:first-child {
			margin-left: 0;
		}
	}

	.secondary-link {
		@include pos(auto, $sizeGrid, $sizeGrid * 2, auto);
		position: absolute;
		color: $colorWhite;
	}

	.component-paginator-dashed {
		position: absolute;
		@include pos(50%, $sizeGrid, auto, auto);
		transform: translateY(-50%);
		z-index: 2;
	}

	@include respond-to(SMALL) {
		min-height: 0;
		height: calc(100vh - #{$sizeGrid * 2});

		&:before {
			display: none;
		}

		.background-triangle {
			@include arrow(right, rgba($colorPrimary, .95), $sizeGrid * 48);
		}

		.secondary-background-triangle {
			@include arrow(left, rgba($colorSecondary, .95), $sizeGrid * 20);
			left: $sizeGrid * 14;
		}

		.tertiary-background-triangle {
			display: none;
		}

		.slide-content {
			@include size($sizeGrid * 18, auto);
			padding-left: $sizeGrid * 2;
		}

		.statistics-wrapper {
			@include pos(auto, 0, $sizeGrid * 6, 0);
			padding: 0 $sizeGrid * 2;

			.heading {
				text-align: center;
				margin-bottom: $sizeGrid;
			}
		}

		.statistics {
			text-align: left;
		}

		.statistic {
			display: flex;
			align-items: center;
			justify-content: flex-start;
			margin: $sizeGrid 0 0;

			.heading {
				font-size: mobile-size(3.5rem);
				text-align: left;
				margin-bottom: 0;
				order: 2;
				margin-left: $sizeGrid * 2;
			}

			.component-percentage-loader {
				order: 1;
			}
		}

		&.has-statistics {
			$statisticsHeight: $sizeGrid  * 30;
			height: calc(100vh - #{$sizeGrid * 4} + #{$statisticsHeight});
			max-height: none;

			.background-triangle {
				top: calc(50% - #{$statisticsHeight / 2});
			}

			.secondary-background-triangle {
				top: calc(50% - #{$statisticsHeight / 2});
			}

			.slide-content {
				top: calc(50% - #{$statisticsHeight / 2});
			}
		}
	}

}

